# aca-safety-net

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  config.toml  justfile
docs/: 2026-01-02-initial-build.md  2026-01-15-prd-sandbox-tool.md  2026-01-15-product-doc.md  2026-01-15-sandbox-runtime-overlap.md
src/: audit.rs  config.rs  decision.rs  input.rs  lib.rs  main.rs
src/analysis/: bash.rs  edit.rs  mod.rs  read.rs  write.rs
src/output/: mod.rs  redaction.rs  response.rs
src/rules/: aws.rs  azure.rs  custom.rs  find.rs  gcloud.rs  git.rs  heroku.rs  kubectl.rs  mod.rs  parallel.rs  rm.rs  secrets.rs  sensitive_files.rs  substitution.rs  uv.rs  xargs.rs
src/shell/: mod.rs  splitter.rs  tokenizer.rs  wrappers.rs
test_input/: .env  .env.local  .netrc  server.pem
test_input/.aws/: credentials
test_input/.ssh/: id_rsa
tests/: hook_direct.rs  integration.rs
