[package]
name = "aca-safety-net"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
dirs = "6.0.0"
once_cell = "1.21.3"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
thiserror = "2.0.17"
toml = "0.9.10"

[dev-dependencies]
assert_cmd = "2.1.1"
predicates = "3.1.3"
tempfile = "3.24.0"
